2014-02-18  Anders Carlsson  <andersca@apple.com>

        Add SPI for allowing HTTPS certificates
        https://bugs.webkit.org/show_bug.cgi?id=129002

        Reviewed by Dan Bernstein.

        * UIProcess/API/Cocoa/WKProcessClass.mm:
        (-[WKProcessClass _setAllowsSpecificHTTPSCertificate:forHost:]):
        * UIProcess/API/Cocoa/WKProcessClassInternal.h:
        * UIProcess/API/Cocoa/WKProcessClassPrivate.h: Copied from Source/WebKit2/UIProcess/API/Cocoa/WKProcessClassInternal.h.
        * WebKit2.xcodeproj/project.pbxproj:

2014-02-18  Anders Carlsson  <andersca@apple.com>

        Add SPI for getting the original URL from a WKNavigationAction
        https://bugs.webkit.org/show_bug.cgi?id=128997

        Reviewed by Tim Horton.

        * UIProcess/API/Cocoa/WKNavigationActionInternal.h:
        * UIProcess/API/Cocoa/WKNavigationActionPrivate.h: Copied from Source/WebKit2/UIProcess/API/Cocoa/WKNavigationActionInternal.h.
        * UIProcess/Cocoa/NavigationState.mm:
        (WebKit::NavigationState::PolicyClient::decidePolicyForNavigationAction):
        * WebKit2.xcodeproj/project.pbxproj:

2014-02-18  Anders Carlsson  <andersca@apple.com>

        Add more WKWebView SPI
        https://bugs.webkit.org/show_bug.cgi?id=128994

        Reviewed by Tim Horton.

        * UIProcess/API/Cocoa/WKHistoryDelegatePrivate.h:
        * UIProcess/API/Cocoa/WKWebView.mm:
        (-[WKWebView _unreachableURL]):
        (-[WKWebView _loadAlternateHTMLString:baseURL:forUnreachableURL:]):
        * UIProcess/API/Cocoa/WKWebViewPrivate.h:

2014-02-18  Anders Carlsson  <andersca@apple.com>

        Fix build.

        * UIProcess/API/Cocoa/WKProcessClassConfiguration.mm:
        (-[WKProcessClassConfiguration description]):

2014-02-18  Sam Weinig  <sam@webkit.org>

        Temporarily remove support for setting the maximumDecodedImageSize. It is causing assertions.

        * Shared/WebPreferencesStore.h:
        * WebProcess/WebPage/WebPage.cpp: